fix letter spacing for teaser cards.

--- a/components/teasercard.module.css
+++ b/components/teasercard.module.css
@@ -63,6 +63,7 @@
   font-weight: 400;
   margin-top: 0;
   margin-bottom: 2rem;
+  letter-spacing: 0.035em;
 }
 
 .card .imageContainer {
